# SCIO-Backend-Assignment

./: README.md  main.py  pyproject.toml  requirements.txt
data/: Algo data.xlsx  Scan Results data.xlsx  Scan data.xlsx  Widget data.xlsx
src/: settings.py
src/api/: __init__.py  dependencies.py  v1.py
src/domain/: models.py  schemas.py  services.py
src/infrastructure/: repository.py
src/utils/: __init__.py  formatting.py
tests/: test_api.py  test_services.py
